--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
     "axios": "^1.11.0",
