--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,12 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@mozilla/readability": "^0.6.0",
     "axios": "^1.11.0",
-    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.0",
-    "jsdom": "^26.1.0"
+    "helmet": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
