--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.0",
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.0"
+    "helmet": "^6.0.0",
+    "puppeteer": "^24.20.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
