--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
+    "jsdom": "^27.0.0",
     "puppeteer": "^24.20.0"
   },
   "devDependencies": {
