Optimize deployment for Render: switch to puppeteer-core, skip Puppeteer download, and use system Chrome paths to avoid installation timeouts

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: fns-backend
     runtime: node
-    buildCommand: npm install
+    buildCommand: PUPPETEER_SKIP_DOWNLOAD=true npm install
     startCommand: npm start
     envVars:
       - key: NODE_ENV
