--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
-    "puppeteer": "^21.0.0"
+    "puppeteer-core": "^21.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
