--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,13 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "article-extractor": "^1.0.2",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
-    "puppeteer-core": "^21.0.0"
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
