--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.16.0",
     "@supabase/supabase-js": "^2.45.0",
     "@types/react-router-dom": "^5.3.3",
+    "better-sqlite3": "^12.2.0",
     "puppeteer": "^24.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
