--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@supabase/supabase-js": "^2.45.0",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.5.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "pg": "^8.12.0",
     "puppeteer": "^24.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
