--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.16.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.45.0",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.5.0",
